--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ edition = "2018"
 rspotify = { version = "0.9"}
 tokio = { version = "0.2", features = ["full"] }
 anyhow = "^1.0"
-clap = "2.33.1"
+clap = { version = "2.33.1", features = [ "color" ] }
